<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.squady.MainActivity">

    <include
        android:layout_width="match_parent"
        android:layout_height="200dp"
        layout="@layout/loginscreenlogoarea"
        android:id="@+id/include" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignBottom="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:src="@drawable/squadylogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/include"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        android:typeface="serif"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/textView"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/mainColor"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColor="@color/textColor"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:paddingStart="15dp"
        android:background="@color/mainColor"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editText2"
        android:background="@color/colorPrimary"

        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:text="@string/registerRequest"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/googlesignin" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:src="@drawable/facebooksignin" />

</RelativeLayout>
