<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/drawermenu"
        android:id="@+id/nv"
        android:background="@color/textColor"
        app:headerLayout="@layout/navigation_header"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="ca.squady.SquadyEditProfile">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary" >

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/editprofile"
                android:textColor="@color/textColor"
                android:textSize="23sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/mainColor" />

            <Button
                android:id="@+id/uploadProfilePhoto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:layout_below="@+id/relativeLayout4"
                android:background="@color/colorPrimary"
                android:text="@string/uploadProfilePhoto"
                android:textColor="@color/textColor"
                android:onClick="uploadProfilePhoto"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/profilephoto"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/squadylogo" />

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/uploadProfilePhoto"
                android:background="@color/holderColor"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="15dp">

                <EditText
                    android:id="@+id/updateUsername"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/updateName"
                    android:background="@color/textColor"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:paddingStart="15dp"
                    android:textColor="@color/darkText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/updateName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/updateUsername"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:background="@color/textColor"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingStart="15dp"
                    android:textColor="@color/darkText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/updateEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/updateName"
                    android:layout_marginTop="3dp"
                    android:background="@color/textColor"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="15dp"
                    android:textColor="@color/darkText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/updatePhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/updateEmailAddress"
                    android:layout_marginTop="3dp"
                    android:background="@color/textColor"
                    android:ems="10"
                    android:hint="@string/phoneno"
                    android:inputType="phone"
                    android:paddingStart="15dp"
                    android:textColor="@color/darkText"
                    android:textStyle="bold" />

            </RelativeLayout>

            <Button
                android:id="@+id/saveProfileUpdate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:onClick="saveProfileUpdate"
                android:layout_below="@+id/relativeLayout2"
                android:background="@color/colorPrimary"
                android:text="@string/updateProfile"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </TableLayout>

</ScrollView>
</android.support.v4.widget.DrawerLayout>