<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ca.squady.SquadyViewProfile">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/textColor"
            app:title="@string/app_name"/>

        <include
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="200dp"
            layout="@layout/loginscreenlogoarea"
            android:id="@+id/include" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:layout_below="@+id/imageView6"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/holderColor"
            android:padding="20dp">

            <TextView
                android:id="@+id/usernameHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewprofileusername"
                android:textColor="@color/colorPrimary"
                android:textSize="23sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="35dp"
            android:layout_below="@id/relativeLayout"
            android:layout_centerHorizontal="true"
            android:background="#E0E0E0"
            android:padding="23dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/name" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView1"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/location" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/imageView3"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/email" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView4"
                android:src="@drawable/phonenumber" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView1"
                android:layout_toEndOf="@+id/imageView1"
                android:padding="4dp"
                android:text="@string/viewprofilename"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView3"
                android:layout_alignTop="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3"
                android:padding="4dp"
                android:text="@string/viewprofilelocation"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView4"
                android:layout_toEndOf="@+id/imageView4"
                android:padding="4dp"
                android:text="@string/viewprofileemail"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView5"
                android:layout_alignTop="@+id/imageView5"
                android:layout_toEndOf="@+id/imageView5"
                android:padding="4dp"
                android:text="@string/viewprofilephoneno"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:background="@color/colorPrimary"
                android:layout_below="@id/imageView5"
                android:layout_marginTop="10dp"
                android:text="@string/editprofile"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:layout_marginTop="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/squadylogo" />

    </RelativeLayout>

    </TableLayout>

</ScrollView>