<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:fillViewport="true"
    tools:context="ca.squady.SquadyLogin">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/imageView"
                android:layout_marginTop="61dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/textColor"
                android:padding="15dp">

                <EditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:background="@color/mainColor"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/loginEmail"
                    android:layout_marginTop="10dp"
                    android:background="@color/mainColor"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/loginPassword"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:onClick="userLogin"
                    android:text="@string/login"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:src="@drawable/squadylogo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:onClick="userSignup"
                android:text="@string/registerRequest"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />

        </RelativeLayout>

    </TableLayout>

</ScrollView>